crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI035_PYI035.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI035 `__all__` in a stub file must have a value, as it has the same semantics as `__all__` at runtime
 --> PYI035.pyi:1:1
  |
1 | __all__: list[str]  # Error: PYI035
  | ^^^^^^^^^^^^^^^^^^
  |

PYI035 `__match_args__` in a stub file must have a value, as it has the same semantics as `__match_args__` at runtime
 --> PYI035.pyi:7:5
  |
7 |     __match_args__: tuple[str, ...]  # Error: PYI035
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

PYI035 `__slots__` in a stub file must have a value, as it has the same semantics as `__slots__` at runtime
 --> PYI035.pyi:8:5
  |
8 |     __slots__: tuple[str, ...]  # Error: PYI035
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
