crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI041_PYI041_2.py.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI041 Use `float` instead of `int | float`
 --> PYI041_2.py:7:23
  |
7 |     def f1(self, arg: None | int | None | float = None) -> None:
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: Remove redundant type
