crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI042_PYI042.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI042 Type alias `just_literals_pipe_union` should be CamelCase
  --> PYI042.pyi:10:1
   |
10 | just_literals_pipe_union: TypeAlias = (
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |

PYI042 Type alias `snake_case_alias1` should be CamelCase
  --> PYI042.pyi:19:1
   |
19 | snake_case_alias1: TypeAlias = str | int  # PYI042, since not camel case
   | ^^^^^^^^^^^^^^^^^
   |

PYI042 Type alias `_snake_case_alias2` should be CamelCase
  --> PYI042.pyi:20:1
   |
20 | _snake_case_alias2: TypeAlias = Literal["whatever"]  # PYI042, since not camel case
   | ^^^^^^^^^^^^^^^^^^
   |

PYI042 Type alias `foo_bar` should be CamelCase
  --> PYI042.pyi:27:6
   |
27 | type foo_bar = int | str
   |      ^^^^^^^
   |
