crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI044_PYI044.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI044 [*] `from __future__ import annotations` has no effect in stub files, since type checkers automatically treat stubs as having those semantics
 --> PYI044.pyi:2:1
  |
1 | # Bad import.
2 | from __future__ import annotations # PYI044.
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
3 | from __future__ import annotations, with_statement # PYI044.
  |
help: Remove `from __future__ import annotations`
  |
2 - from __future__ import annotations # PYI044.
  |

PYI044 [*] `from __future__ import annotations` has no effect in stub files, since type checkers automatically treat stubs as having those semantics
 --> PYI044.pyi:3:1
  |
1 | # Bad import.
2 | from __future__ import annotations # PYI044.
3 | from __future__ import annotations, with_statement # PYI044.
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
4 |
5 | # Good imports.
  |
help: Remove `from __future__ import annotations`
  |
3 - from __future__ import annotations, with_statement # PYI044.
3 + from __future__ import with_statement # PYI044.
  |
