crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI045_PYI045.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI045 `__iter__` methods should return an `Iterator`, not an `Iterable`
 --> PYI045.pyi:9:27
  |
9 |     def __iter__(self) -> typing.Iterable[int]: ...  # Error: PYI045
  |                           ^^^^^^^^^^^^^^^^^^^^
  |

PYI045 `__iter__` methods should return an `Iterator`, not an `Iterable`
  --> PYI045.pyi:13:27
   |
13 |     def __iter__(self) -> typing.Iterable: ...  # Error: PYI045
   |                           ^^^^^^^^^^^^^^^
   |

PYI045 `__iter__` methods should return an `Iterator`, not an `Iterable`
  --> PYI045.pyi:17:27
   |
17 |     def __iter__(self) -> collections.abc.Iterable[int]: ...  # Error: PYI045
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

PYI045 `__iter__` methods should return an `Iterator`, not an `Iterable`
  --> PYI045.pyi:21:27
   |
21 |     def __iter__(self) -> collections.abc.Iterable: ...  # Error: PYI045
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^
   |

PYI045 `__iter__` methods should return an `Iterator`, not an `Iterable`
  --> PYI045.pyi:25:27
   |
25 |     def __iter__(self) -> Iterable: ...  # Error: PYI045
   |                           ^^^^^^^^
   |

PYI045 `__aiter__` methods should return an `AsyncIterator`, not an `AsyncIterable`
  --> PYI045.pyi:46:28
   |
46 |     def __aiter__(self) -> typing.AsyncIterable[int]: ...  # Error: PYI045
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^
   |

PYI045 `__aiter__` methods should return an `AsyncIterator`, not an `AsyncIterable`
  --> PYI045.pyi:49:28
   |
49 |     def __aiter__(self) -> typing.AsyncIterable: ...  # Error: PYI045
   |                            ^^^^^^^^^^^^^^^^^^^^
   |
