crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI046_PYI046.py.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI046 Private protocol `_Foo` is never used
 --> PYI046.py:5:7
  |
5 | class _Foo(Protocol):
  |       ^^^^
  |

PYI046 Private protocol `_Bar` is never used
 --> PYI046.py:9:7
  |
9 | class _Bar(typing.Protocol):
  |       ^^^^
  |

PYI046 Private protocol `_Baz` is never used
  --> PYI046.py:16:7
   |
16 | class _Baz(Protocol[_T]):
   |       ^^^^
   |
