crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI046_PYI046.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI046 Private protocol `_Foo` is never used
 --> PYI046.pyi:5:7
  |
5 | class _Foo(object, Protocol):
  |       ^^^^
  |

PYI046 Private protocol `_Bar` is never used
 --> PYI046.pyi:9:7
  |
9 | class _Bar(typing.Protocol):
  |       ^^^^
  |

PYI046 Private protocol `_Baz` is never used
  --> PYI046.pyi:16:7
   |
16 | class _Baz(Protocol[_T]):
   |       ^^^^
   |
